--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="10dp"
         android:contentDescription="@string/onboarding_screens" />
 
     <FrameLayout
@@ -22,26 +22,31 @@
 
     <Button
         android:id="@+id/nextButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="325dp"
+        android:layout_height="57dp"
         android:text="@string/next"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="8dp"
-        app:cornerRadius="10dp"
+        android:layout_marginBottom="5dp"
+        app:cornerRadius="20dp"
+        android:textSize="20sp"
+        android:fontFamily="@font/poppins_semi_bold"
         android:backgroundTint="@color/color_green"
         android:textColor="@android:color/white"/>
 
     <Button
         android:id="@+id/skipButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="325dp"
+        android:layout_height="57dp"
         android:text="@string/skip"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="100dp"
-        app:cornerRadius="10dp"
-        android:backgroundTint="@color/color_beige"
-        android:textColor="@android:color/white"/>
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="80dp"
+        app:cornerRadius="20dp"
+        android:textSize="20sp"
+        android:fontFamily="@font/poppins_semi_bold"
+        android:backgroundTint="#ECF4EB"
+        android:textColor="#9F9696"/>
 
 </LinearLayout>
