--- a/app/src/main/res/layout/onboarding_1.xml
+++ b/app/src/main/res/layout/onboarding_1.xml
@@ -15,11 +15,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/poppins_medium"
+        android:fontFamily="@font/poppins_semi_bold"
         android:text="@string/welcome"
         android:textColor="@color/color_green"
-        android:textSize="30sp"
-        android:textStyle="bold" />
+        android:textSize="28sp" />
 
     <TextView
         android:layout_width="wrap_content"
