--- a/app/src/main/res/layout/onboarding_2.xml
+++ b/app/src/main/res/layout/onboarding_2.xml
@@ -14,12 +14,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="16dp"
         android:textColor="@color/color_green"
-        android:fontFamily="@font/poppins_medium"
+        android:fontFamily="@font/poppins_semi_bold"
         android:text="@string/tittle_ob2"
-        android:textSize="25sp"
-        android:textStyle="bold"
+        android:textSize="24sp"
         android:gravity="center" />
 
     <TextView
