--- a/app/src/main/res/layout/onboarding_4.xml
+++ b/app/src/main/res/layout/onboarding_4.xml
@@ -16,11 +16,10 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="16dp"
-        android:fontFamily="@font/poppins_medium"
+        android:fontFamily="@font/poppins_semi_bold"
         android:text="@string/tittle_ob4"
         android:textColor="@color/color_green"
-        android:textSize="25sp"
-        android:textStyle="bold" />
+        android:textSize="25sp" />
 
     <TextView
         android:layout_width="wrap_content"
