--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -151,7 +151,7 @@
             android:backgroundTint="#54BF4C"
             android:fontFamily="@font/poppins_semi_bold"
             android:padding="12dp"
-            android:text="@string/sign_up"
+            android:text="@string/sign_in"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             app:cornerRadius="20dp" />
