--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="color_cyan">#4dd0e1</color>
     <color name="color_beige">#B2ACAC</color>
     <color name="color_light_green2">#DDE4DD</color>
+    <color name="red">#FF0000</color>
 </resources>
