--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -21,7 +21,7 @@
             android:layout_height="26dp"
             android:layout_marginTop="30dp"
             android:contentDescription="@string/arrow_left"
-            android:src="@drawable/back" />
+            android:src="@drawable/ic_back" />
 
         <!-- Title Text -->
         <TextView
