--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -14,10 +14,10 @@
         android:gravity="center_vertical">
 
         <ImageView
-            android:id="@+id/backButton"
+            android:id="@+id/backButtonProfile"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/back"
+            android:src="@drawable/ic_back"
             android:contentDescription="@string/back" />
 
         <TextView
