--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,7 @@
     <style name="Base.Theme.KulinerKita" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
          <item name="colorPrimary">@color/color_green</item>
+        <item name="android:statusBarColor">@color/color_green</item>
     </style>
 
     <style name="Theme.KulinerKita" parent="Base.Theme.KulinerKita" />
