--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="color_beige">#B2ACAC</color>
     <color name="color_light_green2">#ECF4EB</color>
     <color name="red">#FF0000</color>
+    <color name="yellow">#FFEB3B</color>
 </resources>
