--- a/app/src/main/res/drawable/bottom_nav.xml
+++ b/app/src/main/res/drawable/bottom_nav.xml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white" />  <!-- Warna latar belakang jika diperlukan -->
-    <corners android:radius="20dp" /> <!-- Jika ingin melengkungkan sudut -->
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@android:color/transparent" />
+            <size android:height="4dp" />
+        </shape>
+    </item>
+    <item android:top="-4dp">
+        <shape android:shape="rectangle">
+            <gradient
+                android:startColor="#20000000"
+                android:endColor="@android:color/transparent"
+                android:angle="90" />
+            <size android:height="4dp" />
+        </shape>
+    </item>
+</layer-list>
