--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-
     <!-- Fragment Host -->
     <fragment
         android:id="@+id/nav_host_fragment_activity_main2"
@@ -23,7 +22,6 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_gravity="bottom"
-        app:elevation="8dp"
         android:background="@drawable/bottom_nav"
         app:hideOnScroll="false">
 
@@ -33,7 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:itemIconTint="@color/color_green"
-            android:background="@android:color/transparent"
+            android:background="@color/white"
             app:labelVisibilityMode="unlabeled"
             app:menu="@menu/bottom_nav_menu" />
 
