--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -21,14 +21,14 @@
             android:gravity="center_vertical">
 
             <ImageView
-                android:id="@+id/backButtonProfile"
+                android:id="@+id/backButtonFavorite"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/ic_back"
                 android:contentDescription="@string/back" />
 
             <TextView
-                android:id="@+id/profileTitle"
+                android:id="@+id/favoriteTitle"
                 android:layout_width="289dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -46,8 +46,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:padding="8dp"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            tools:listitem="@layout/item_favorite" />
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />
     </LinearLayout>
 
 </FrameLayout>
