--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_medium"
-                android:text="@string/name_users"
+                android:text="@string/name_hai"
                 android:textSize="22sp"
                 android:textColor="@color/black"
                 tools:ignore="SpUsage,TextSizeCheck" />
@@ -124,13 +124,13 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="20dp">
+            android:layout_marginTop="10dp">
 
             <ImageView
                 android:id="@+id/foodImage"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
+                android:layout_marginStart="30dp"
                 android:src="@drawable/ic_food"
                 android:contentDescription="@string/text_food"/>
 
@@ -140,7 +140,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/foodImage"
                 android:layout_marginTop="6dp"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="28dp"
                 android:text="@string/text_food"
                 android:textSize="15sp"
                 android:textColor="@color/black"
@@ -151,7 +151,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/ic_drink"
-                android:layout_marginStart="40dp"
+                android:layout_marginStart="52dp"
                 android:layout_toEndOf="@id/foodImage"
                 android:layout_marginTop="8dp"
                 android:contentDescription="@string/text_drink"/>
@@ -162,7 +162,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/drinkImage"
                 android:layout_marginTop="6dp"
-                android:layout_marginStart="60dp"
+                android:layout_marginStart="35dp"
                 android:text="@string/text_drink"
                 android:layout_toEndOf="@id/Tv_food"
                 android:textSize="15sp"
@@ -186,7 +186,6 @@
             android:id="@+id/itemRestoran"
             android:layout_width="match_parent"
             android:layout_height="600dp"
-            android:layout_marginTop="5dp"
-            android:nestedScrollingEnabled="true" />
+            android:layout_marginTop="5dp" />
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
