Update halaman home

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -109,11 +109,19 @@
                 android:layout_marginLeft="8dp" />
         </LinearLayout>
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/item_kulinerNews"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            tools:listitem="@layout/item_news_home"
+            android:layout_marginTop="12dp" />
+
         <TextView
             android:id="@+id/Tv_upcoming"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="30dp"
             android:layout_marginStart="20dp"
             android:fontFamily="@font/poppins_semi_bold"
             android:text="@string/culiner_kategori"
@@ -174,7 +182,7 @@
             android:id="@+id/Tv_recomendation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="30dp"
             android:layout_marginStart="20dp"
             android:fontFamily="@font/poppins_semi_bold"
             android:text="@string/text_recomendation"
