--- a/app/src/main/res/layout/activity_onboarding_last.xml
+++ b/app/src/main/res/layout/activity_onboarding_last.xml
@@ -31,6 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:padding="10dp"
         android:text="@string/desc_ob5"
         android:textSize="15sp"
         android:textColor="#B2ACAC"
