--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -9,7 +9,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingBottom="16dp">
 
         <!-- Back Arrow and Title -->
         <LinearLayout
@@ -17,8 +18,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginTop="20dp"
-            android:padding="16dp"
-            android:gravity="center_vertical">
+            android:layout_marginStart="20dp">
 
             <ImageView
                 android:id="@+id/backButtonFavorite"
@@ -45,6 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:layout_marginTop="15dp"
             android:padding="8dp"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />
     </LinearLayout>
