--- a/app/src/main/res/layout/onboarding_4.xml
+++ b/app/src/main/res/layout/onboarding_4.xml
@@ -9,15 +9,13 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/gambar_onboarding4"
-        android:layout_marginBottom="10dp"/>
+        android:src="@drawable/gambar_onboarding4" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="5dp"
-        android:layout_marginTop="5dp"
         android:fontFamily="@font/poppins_semi_bold"
         android:text="@string/tittle_ob4"
         android:textColor="@color/color_green"
